unpackaged/main/default/objects/orderDetails__x/orderDetails__x.object-meta.xml
<CustomObject>
    <description>orderDetails</description>
    <externalDataSource>P21Orders_Integration</externalDataSource>
    <externalName>orderDetails</externalName>
    <label>orderDetails</label>
    <pluralLabel>orderDetails</pluralLabel>
</CustomObject>