unpackaged/main/default/objects/orderDetails__x/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Contact</description>
    <externalDeveloperName>Contact</externalDeveloperName>
    <label>Contact</label>
    <length>140</length>
    <type>Text</type>
</CustomField>