unpackaged/main/default/objects/orderDetails__x/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>CustomerName</description>
    <externalDeveloperName>CustomerName</externalDeveloperName>
    <label>CustomerName</label>
    <length>140</length>
    <type>Text</type>
</CustomField>