unpackaged/main/default/objects/orderDetails__x/fields/ItemId__c.field-meta.xml
<CustomField>
    <fullName>ItemId__c</fullName>
    <description>ItemId</description>
    <externalDeveloperName>ItemId</externalDeveloperName>
    <label>ItemId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>