unpackaged/main/default/objects/orderDetails__x/fields/LineNo__c.field-meta.xml
<CustomField>
    <fullName>LineNo__c</fullName>
    <description>LineNo</description>
    <externalDeveloperName>LineNo</externalDeveloperName>
    <label>LineNo</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>