unpackaged/main/default/objects/orderDetails__x/fields/LineStatus__c.field-meta.xml
<CustomField>
    <fullName>LineStatus__c</fullName>
    <description>LineStatus</description>
    <externalDeveloperName>LineStatus</externalDeveloperName>
    <label>LineStatus</label>
    <length>40</length>
    <type>Text</type>
</CustomField>