unpackaged/main/default/objects/orderDetails__x/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <description>OrderNo</description>
    <externalDeveloperName>OrderNo</externalDeveloperName>
    <label>OrderNo</label>
    <length>18</length>
    <referenceTo>orders__x</referenceTo>
    <relationshipLabel>orderDetails</relationshipLabel>
    <relationshipName>orderDetails</relationshipName>
    <type>ExternalLookup</type>
</CustomField>