unpackaged/main/default/objects/orderDetails__x/fields/QtyOrdered__c.field-meta.xml
<CustomField>
    <fullName>QtyOrdered__c</fullName>
    <description>QtyOrdered</description>
    <externalDeveloperName>QtyOrdered</externalDeveloperName>
    <label>QtyOrdered</label>
    <length>20</length>
    <type>Text</type>
</CustomField>