unpackaged/main/default/objects/orderDetails__x/fields/Taker__c.field-meta.xml
<CustomField>
    <fullName>Taker__c</fullName>
    <description>Taker</description>
    <externalDeveloperName>Taker</externalDeveloperName>
    <label>Taker</label>
    <length>40</length>
    <type>Text</type>
</CustomField>